# django-address-kit

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
address/: apps.py  models.py  pyproject.toml
address/management/commands/: dump_legacy_addresses.py  generate_sample_legacy_addresses.py
address/migrations/: 0001_initial.py
config/: settings.py
docs/: geocoding.md  migration-guide.md
src/django_address_kit/: __init__.py  admin.py  apps.py  constants.py  fields.py  formatters.py  ingest.py  models.py  resolvers.py  serializers.py  utils.py  validators.py
src/django_address_kit/management/: __init__.py
src/django_address_kit/management/commands/: __init__.py  ingest_legacy_addresses.py
src/django_address_kit/migrations/: 0001_initial.py  0002_address_is_military_address_is_po_box_and_more.py
src/django_address_kit/providers/: __init__.py  base.py  google.py  loqate.py
src/django_address_kit/tests/: legacy.py
tests/: __init__.py  conftest.py  factories.py  settings.py  test_admin.py  test_app_config.py  test_edge_cases.py  test_fields.py  test_formatters.py  test_ingest.py  test_integration.py  test_migrations.py  test_models.py  test_performance.py  test_providers.py  test_resolvers.py  test_serializer_validation.py  test_serializers.py  test_utils.py  test_validators.py
