[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-address"
version = "0.0.0"
description = "Stub django-address package for tests"
authors = [{name = "Legacy"}]
dependencies = ["django>=4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["address*"]
